--- a/other-pages/about-us.html
+++ b/other-pages/about-us.html
@@ -7,27 +7,27 @@
     <!-- LINK BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- LINK CSS PERSONAL -->
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Experimento - Bootstrap</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>About Us</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="../index.html">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./other-pages/about-us.html">About Us</a>
+                    <a class="nav-link" href="../other-pages/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link header-corner" href="./other-pages/contact-us.html">Contact Us</a>
+                    <a class="nav-link header-corner" href="../other-pages/contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -35,13 +35,9 @@
           </nav>
     </header>
 
-    <main class="container-fluid">
+    <main></main>
 
-    </main>
-
-    <footer class="container-fluid">
-
-    </footer>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
