--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand a" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active a" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./other-pages/about-us.html">About Us</a>
+                    <a class="nav-link a" href="./other-pages/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link header-corner" href="./other-pages/contact-us.html">Contact Us</a>
+                    <a class="nav-link header-corner a" href="./other-pages/contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -35,7 +35,7 @@
           </nav>
     </header>
 
-    <main class="container-fluid">
+    <main>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -44,13 +44,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/paisaje-1.jpg" class="d-block w-100" alt="...">
+            <img src="./img/paisaje-1.jpg" class="d-block w-100" height="800px" width="1980" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/paisaje-2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/paisaje-2.jpg" class="d-block w-100" height="800px" width="1980" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./img/paisaje-3.jpg" class="d-block w-100" alt="...">
+            <img src="./img/paisaje-3.jpg" class="d-block w-100" height="800px" width="1980" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,10 +62,33 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <div class="container-fluid parte-2 d-flex">
+        <div class="card text-center" style="width: 18rem;">
+          <img src="./img/fondo-card.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">About Us</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./other-pages/about-us.html" class="btn btn-primary">Go About Us</a>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 18rem;">
+          <img src="./img/fondo-card.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Contact Us</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="./other-pages/contact-us.html" class="btn btn-primary">Go Contact Us</a>
+          </div>
+        </div>
+      </div>
+
     </main>
 
-    <footer class="container-fluid">
-
+    <footer class="footer-copyright text-center py-3">
+      <div>
+        Copyright 2050:
+        "<a href="https://www.google.com.ar/?hl=es" class="footer">Experimento - Bootstrap</a>"
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
