--- a/other-pages/contact-us.html
+++ b/other-pages/contact-us.html
@@ -14,20 +14,20 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">Navbar</a>
+              <a class="navbar-brand a" href="../index.html">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link active a" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../other-pages/about-us.html">About Us</a>
+                    <a class="nav-link a" href="../other-pages/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link header-corner" href="../other-pages/contact-us.html">Contact Us</a>
+                    <a class="nav-link header-corner a" href="../other-pages/contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -37,7 +37,12 @@
 
     <main></main>
 
-    <footer></footer>
+    <footer class="footer-copyright text-center py-3">
+      <div>
+        Copyright 2050:
+        "<a href="https://www.google.com.ar/?hl=es" class="footer">Experimento - Bootstrap</a>"
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
