--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand a" href="#">Navbar</a>
+              <a class="navbar-brand a" href="#">Experiment</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,9 +22,6 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active a" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link a" href="./other-pages/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link header-corner a" href="./other-pages/contact-us.html">Contact Us</a>
@@ -63,15 +60,7 @@
         </button>
       </div>
 
-      <div class="container-fluid parte-2 d-flex">
-        <div class="card text-center" style="width: 18rem;">
-          <img src="./img/fondo-card.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">About Us</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="./other-pages/about-us.html" class="btn btn-primary">Go About Us</a>
-          </div>
-        </div>
+      <div class="container-fluid parte-2 d-flex justify-content-center">
         <div class="card text-center" style="width: 18rem;">
           <img src="./img/fondo-card.jpg" class="card-img-top" alt="...">
           <div class="card-body">
