--- a/other-pages/contact-us.html
+++ b/other-pages/contact-us.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand a" href="../index.html">Navbar</a>
+              <a class="navbar-brand a" href="../index.html">Experiment</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,9 +22,6 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active a" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link a" href="../other-pages/about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link header-corner a" href="../other-pages/contact-us.html">Contact Us</a>
@@ -35,9 +32,25 @@
           </nav>
     </header>
 
-    <main></main>
+    <main class="main-v2">
+      <h1 class="text-center">Contact Us</h1>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3">
+        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="inputPassword">
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+    </main>
 
-    <footer class="footer-copyright text-center py-3">
+    <footer class="footer-copyright text-center py-3 footer-v2">
       <div>
         Copyright 2050:
         "<a href="https://www.google.com.ar/?hl=es" class="footer">Experimento - Bootstrap</a>"
